# Resume-Generator-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
ai_projects/resume_bot/: Dockerfile  pyproject.toml
ai_projects/resume_bot/src/: bot.py  database.py  pdf_generator.py  resume_builder.py  transcriber.py
src/: bot.py  conversation.py  pdf_generator.py  resume_builder.py
src/template/: resume_template_experience.docx  resume_template_experienced.docx  resume_template_fresher.docx
